otus/lab_K_2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: pointservice-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: pointservice-app
    template:
       metadata:
          labels:
             app: pointservice-app
       spec:
          containers:
          - name: pointservice-app
            image: pointservice-app
            ports:
              - name: web
                containerPort: 80
            startupProbe:
              httpGet:
                path: /startup
                port: web
              failureThreshold: 5
              periodSeconds: 10   
            readinessProbe:
              httpGet:
                port: web
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
