otus/lab_K_2/postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: postgres
    labels:
        app: postgres
spec:
    type: NodePort
    ports:
    - port: 5432
    selector:
        app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: postgres-statefulset
spec:
    serviceName: "postgres"
    replicas: 1
    selector:
        matchLabels:
            app: postgres
    template:
        metadata:
            labels:
                app: postgres
        spec:
            containers:
            - name: postgres
              image: postgres:latest
              ports: 
              - containerPort: 5432
                name: postgredb
              volumeMounts:
              - name: postgredb
                mountPath: /var/lib/postgresql/data
                subPath: postgres
    volumeClaimTemplates:
    - metadata:
        name: postgredb
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: standard
        resources:
            requests:
                storage: 1Gi
