otus/lab_K_2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pointservice-service
spec:
  selector:
    app: pointservice-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
